cmake_minimum_required(VERSION 3.14 FATAL_ERROR)

get_filename_component(ProjectId ${CMAKE_CURRENT_SOURCE_DIR} NAME)
string(REPLACE " " "_" ProjectId ${ProjectId})
project(${ProjectId} LANGUAGES ASM C CXX )

if(${PRINT_OP} MATCHES "SEGGER")
file(GLOB_RECURSE MODULE_SOURCES Src/*.c  Src/*.cpp Segger/Src/*.c Segger/*.cpp )
file(GLOB_RECURSE USER_INCLUDES  Inc/*.h  Inc/*.hpp Segger/Inc/*.h Segger/Inc/*.hpp)
elseif(${PRINT_OP} MATCHES "ITM")
file(GLOB_RECURSE MODULE_SOURCES Src/*.c  Src/*.cpp ITMLogger/Src/*.c ITMLogger/Src/*.cpp )
file(GLOB_RECURSE USER_INCLUDES  Inc/*.h  Inc/*.hpp ITMLogger/Src/*.h ITMLogger/Inc/*.hpp)
Endif()

FOREACH (SRC_EACH_FILE ${MODULE_SOURCES})
LIST (APPEND MODULE_SRC ${SRC_EACH_FILE})
ENDFOREACH()
LIST(REMOVE_DUPLICATES MODULE_SRC)

FOREACH(EACH_FILE ${USER_INCLUDES})  
GET_FILENAME_COMPONENT(_INCPATH ${EACH_FILE} DIRECTORY )
LIST(APPEND INCPATH ${_INCPATH})
endforeach()
LIST(REMOVE_DUPLICATES INCPATH)
LIST(APPEND MODULE_INC_DIR ${INCPATH})
INCLUDE_DIRECTORIES(${INCPATH})
set(INCPATH ${INCPATH} PARENT_SCOPE)
SET(LIB_NAME "DEBUGLOG_LIB")
ADD_LIBRARY(${LIB_NAME} OBJECT ${MODULE_SRC})
SET(DEBUGLOG_LIBS ${LIB_NAME} PARENT_SCOPE)
